--- a/girocode/privacy-policy.html
+++ b/girocode/privacy-policy.html
@@ -51,7 +51,7 @@
     <h2>Kontakt</h2>
     <p>
       Falls Sie Fragen zur Datenschutzerklärung haben, kontaktieren Sie uns
-      unter: girocode.app.dev@gmail.com
+      unter: girocode.app@gmail.com
     </p>
   </body>
 </html>
