add english and german girocode privacy policy

--- a/girocode/privacy-policy-de.html
+++ b/girocode/privacy-policy-de.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GiroCode App - Privacy Policy</title>
+    <title>GiroCode App - Datenschutzerklärung</title>
     <link rel="icon" type="image/x-icon" href="../img/favicon.ico" />
     <style>
       body {
@@ -34,37 +34,42 @@
     </style>
   </head>
   <body>
-    <h1>GiroCode - Privacy Policy</h1>
+    <h1>GiroCode - Datenschutzerklärung</h1>
 
     <a href="privacy-policy.html" class="language-switch">English</a>
     <a href="privacy-policy-de.html" class="language-switch">Deutsch</a>
 
-    <p><strong>Last Updated:</strong> 31.01.2025</p>
+    <p><strong>Letzte Aktualisierung:</strong> 31.01.2025</p>
 
-
-    <h2>General Information</h2>
+    <h2>Allgemeine Hinweise</h2>
     <p>
-      Protecting your personal data is very important to us. This app does not process or store any personal data on external servers. All data remains exclusively on your device.
+      Der Schutz Ihrer persönlichen Daten ist uns sehr wichtig. Diese App
+      verarbeitet oder speichert keine personenbezogenen Daten auf externen
+      Servern. Alle Daten verbleiben ausschließlich auf Ihrem Gerät.
     </p>
 
-    <h2>Data Collection and Storage</h2>
+    <h2>Erhebung und Speicherung von Daten</h2>
     <p>
-      The app stores entered data only locally on your device. No data is transmitted to third parties or stored online.
+      Die App speichert eingegebene Daten nur lokal auf Ihrem Gerät. Es erfolgt
+      keine Übermittlung an Dritte oder eine Online-Speicherung.
     </p>
 
-    <h2>User Rights</h2>
+    <h2>Rechte der Nutzer</h2>
     <p>
-      Since the app does not store or process personal data, rights such as data deletion or data portability do not apply.
+      Da die App keine personenbezogenen Daten speichert oder verarbeitet,
+      entfallen Rechte wie Datenlöschung oder Datenübertragbarkeit.
     </p>
 
-    <h2>Changes to the Privacy Policy</h2>
+    <h2>Änderungen der Datenschutzerklärung</h2>
     <p>
-      This privacy policy may be updated as needed. Please check regularly for any changes.
+      Diese Datenschutzerklärung kann bei Bedarf aktualisiert werden. Bitte
+      prüfen Sie regelmäßig auf Änderungen.
     </p>
 
-    <h2>Contact</h2>
+    <h2>Kontakt</h2>
     <p>
-      If you have any questions about the privacy policy, please contact us at: girocode.app@gmail.com
+      Falls Sie Fragen zur Datenschutzerklärung haben, kontaktieren Sie uns
+      unter: girocode.app@gmail.com
     </p>
   </body>
 </html>
