--- a/index.html
+++ b/index.html
@@ -2,8 +2,47 @@
 <html>
   <head>
     <title>CORE Apps</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
+        }
+        h1 {
+          padding: 5em;
+          color: #1d4e7f;
+        }
+        h2 {
+          color: #1d4e7f;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin: 10px 0;
+        }
+        a {
+            text-decoration: none;
+            color: #1D4E7F;
+            font-size: 18px;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
   </head>
   <body>
     <h1>CORE Apps</h1>
+
+    <h2>Privacy Policies for GiroCode App:</h2>
+    
+    <ul>
+        <li><a href="girocode/privacy-policy.html">- English Version</a></li>
+        <li><a href="girocode/privacy-policy-de.html">- Deutsche Version</a></li>
+    </ul>
   </body>
 </html>
