add English and German privacy policies for GymBuddy app to index.html and new HTML files

--- a/index.html
+++ b/index.html
@@ -44,5 +44,12 @@
         <li><a href="girocode/privacy-policy.html">- English Version</a></li>
         <li><a href="girocode/privacy-policy-de.html">- Deutsche Version</a></li>
     </ul>
+
+    <h2>Privacy Policies for GymBuddy App:</h2>
+
+    <ul>
+      <li><a href="gymbuddy/privacy-policy.html">- English Version</a></li>
+      <li><a href="gymbuddy/privacy-policy-de.html">- Deutsche Version</a></li>
+    </ul>
   </body>
 </html>
