expand and update English and German privacy policies for GymBuddy app

--- a/gymbuddy/privacy-policy-de.html
+++ b/gymbuddy/privacy-policy-de.html
@@ -1,75 +1,144 @@
 <!DOCTYPE html>
 <html lang="de">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GymBuddy App - Datenschutzerklärung</title>
-    <link rel="icon" type="image/x-icon" href="../img/favicon.ico" />
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        line-height: 1.6;
-        max-width: 800px;
-        margin: 40px auto;
-        padding: 20px;
-      }
-      h1,
-      h2 {
-        color: #1d4e7f;
-      }
-      .language-switch {
-            display: inline-block;
-            margin-top: 10px;
-            margin-bottom: 20px;
-            padding: 5px 20px;
-            background-color: #1D4E7F;
-            color: #ffffff;
-            text-decoration: none;
-            border-radius: 5px;
-            font-size: 16px;
-        }
-        .language-switch:hover {
-            background-color: #163A5F;
-        }
-    </style>
-  </head>
-  <body>
-    <h1>GymBuddy - Datenschutzerklärung</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GymBuddy App - Datenschutzerklärung</title>
+  <link rel="icon" type="image/x-icon" href="../img/favicon.ico" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
+    }
+    h1,
+    h2,
+    h3 {
+      color: #1d4e7f;
+    }
+    .language-switch {
+      display: inline-block;
+      margin-top: 10px;
+      margin-bottom: 20px;
+      padding: 5px 20px;
+      background-color: #1d4e7f;
+      color: #ffffff;
+      text-decoration: none;
+      border-radius: 5px;
+      font-size: 16px;
+    }
+    .language-switch:hover {
+      background-color: #163a5f;
+    }
+  </style>
+</head>
+<body>
+  <h1>GymBuddy – Datenschutzerklärung</h1>
 
-    <a href="privacy-policy.html" class="language-switch">English</a>
-    <a href="privacy-policy-de.html" class="language-switch">Deutsch</a>
+  <a href="privacy-policy.html" class="language-switch">English</a>
+  <a href="privacy-policy-de.html" class="language-switch">Deutsch</a>
 
-    <p><strong>Letzte Aktualisierung:</strong> 07.02.2025</p>
+  <p><strong>Letzte Aktualisierung:</strong> 07.02.2025</p>
 
-    <h2>Allgemeine Hinweise</h2>
-    <p>
-      Der Schutz Ihrer persönlichen Daten ist uns sehr wichtig. Diese App
-      verarbeitet oder speichert keine personenbezogenen Daten auf externen
-      Servern. Alle Daten verbleiben ausschließlich auf Ihrem Gerät.
-    </p>
+  <h2>1. Verantwortlicher</h2>
+  <p>
+    Verantwortlich für die Datenverarbeitung im Sinne der Datenschutzgesetze
+    ist:
+  </p>
+  <p>
+    Max Mustermann<br />
+    E-Mail: core.app.dev@protonmail.com
+  </p>
 
-    <h2>Erhebung und Speicherung von Daten</h2>
-    <p>
-      Die App speichert eingegebene Daten nur lokal auf Ihrem Gerät. Es erfolgt
-      keine Übermittlung an Dritte oder eine Online-Speicherung.
-    </p>
+  <h2>2. Bereitstellung der App</h2>
+  <p>
+    GymBuddy wird über den Google Play Store bereitgestellt. Beim Download und
+    der Nutzung der App gelten zusätzlich die Datenschutzbestimmungen von
+    Google.
+  </p>
 
-    <h2>Rechte der Nutzer</h2>
-    <p>
-      Da die App keine personenbezogenen Daten speichert oder verarbeitet,
-      entfallen Rechte wie Datenlöschung oder Datenübertragbarkeit.
-    </p>
+  <h2>3. Verarbeitung personenbezogener Daten</h2>
 
-    <h2>Änderungen der Datenschutzerklärung</h2>
-    <p>
-      Diese Datenschutzerklärung kann bei Bedarf aktualisiert werden. Bitte
-      prüfen Sie regelmäßig auf Änderungen.
-    </p>
+  <h3>3.1 Lokale Datenspeicherung</h3>
+  <p>
+    Alle von Ihnen eingegebenen Trainingsdaten (z. B. Workouts, Übungen,
+    Wiederholungen, Gewichte, Zeiten) werden ausschließlich lokal auf Ihrem
+    Gerät gespeichert. Es findet keine Übertragung an externe Server statt.
+  </p>
 
-    <h2>Kontakt</h2>
-    <p>
-      Falls Sie Fragen zur Datenschutzerklärung haben, kontaktieren Sie uns
-      unter: core.app.dev@protonmail.com
-    </p>
-  </body>
+  <h3>3.2 Keine Analyse- oder Trackingdienste</h3>
+  <p>
+    GymBuddy verwendet keine Analyse-, Tracking- oder Werbedienste. Es werden
+    keine Nutzungsprofile erstellt und keine personenbezogenen Daten
+    ausgewertet.
+  </p>
+
+  <h2>4. Externe Inhalte (GIFs)</h2>
+
+  <h3>4.1 Herkunft der GIFs</h3>
+  <p>
+    Zur Veranschaulichung von Übungen lädt die App animierte GIFs von folgendem
+    externen Anbieter:
+  </p>
+  <p>
+    https://static.exercisedb.dev/
+  </p>
+
+  <h3>4.2 Art der Einbindung</h3>
+  <p>
+    Die GIFs werden direkt über deren URL geladen und innerhalb der App
+    angezeigt (z. B. über Flutter Image oder CachedNetworkImage).
+  </p>
+
+  <h3>4.3 Automatische Datenübertragung</h3>
+  <p>
+    Beim Öffnen bestimmter App-Bereiche wird automatisch eine Verbindung zu den
+    Servern des externen Anbieters hergestellt. Dabei können technisch bedingt
+    Informationen wie die IP-Adresse an den Anbieter übertragen werden.
+  </p>
+
+  <p>
+    Auf Art, Umfang und Zweck der Datenverarbeitung durch diesen Drittanbieter
+    hat der App-Entwickler keinen Einfluss.
+  </p>
+
+  <h2>5. Weitergabe von Daten</h2>
+  <p>
+    Abgesehen von der oben beschriebenen Einbindung externer GIFs werden keine
+    personenbezogenen Daten an Dritte weitergegeben.
+  </p>
+
+  <h2>6. Berechtigungen der App</h2>
+  <p>GymBuddy benötigt folgende Berechtigungen:</p>
+  <ul>
+    <li>Internet (zum Laden externer GIFs)</li>
+    <li>Benachrichtigungen (z. B. für Timer)</li>
+    <li>Hintergrunddienst / Foreground Service (für laufende Workouts)</li>
+    <li>Audio (akustisches Signal bei Pausenende)</li>
+  </ul>
+
+  <h2>7. Kinder und Jugendliche</h2>
+  <p>
+    Die App richtet sich nicht speziell an Kinder unter 13 Jahren. Es erfolgt
+    keine gezielte Erhebung personenbezogener Daten von Kindern.
+  </p>
+
+  <h2>8. Änderungen dieser Datenschutzerklärung</h2>
+  <p>
+    Diese Datenschutzerklärung kann bei Bedarf angepasst werden, um rechtliche
+    oder technische Änderungen zu berücksichtigen. Die jeweils aktuelle
+    Version ist innerhalb der App und auf dieser Webseite verfügbar.
+  </p>
+
+  <h2>9. Kontakt</h2>
+  <p>
+    Bei Fragen zum Datenschutz oder zur Verarbeitung Ihrer Daten wenden Sie
+    sich bitte an:
+  </p>
+  <p>
+    E-Mail: core.app.dev@protonmail.com
+  </p>
+</body>
 </html>
