--- a/gymbuddy/privacy-policy.html
+++ b/gymbuddy/privacy-policy.html
@@ -1,70 +1,144 @@
 <!DOCTYPE html>
-<html lang="de">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GymBuddy App - Privacy Policy</title>
-    <link rel="icon" type="image/x-icon" href="../img/favicon.ico" />
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        line-height: 1.6;
-        max-width: 800px;
-        margin: 40px auto;
-        padding: 20px;
-      }
-      h1,
-      h2 {
-        color: #1d4e7f;
-      }
-      .language-switch {
-            display: inline-block;
-            margin-top: 10px;
-            margin-bottom: 20px;
-            padding: 5px 20px;
-            background-color: #1D4E7F;
-            color: #ffffff;
-            text-decoration: none;
-            border-radius: 5px;
-            font-size: 16px;
-        }
-        .language-switch:hover {
-            background-color: #163A5F;
-        }
-    </style>
-  </head>
-  <body>
-    <h1>GymBuddy - Privacy Policy</h1>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GymBuddy App - Privacy Policy</title>
+  <link rel="icon" type="image/x-icon" href="../img/favicon.ico" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
+    }
+    h1,
+    h2,
+    h3 {
+      color: #1d4e7f;
+    }
+    .language-switch {
+      display: inline-block;
+      margin-top: 10px;
+      margin-bottom: 20px;
+      padding: 5px 20px;
+      background-color: #1d4e7f;
+      color: #ffffff;
+      text-decoration: none;
+      border-radius: 5px;
+      font-size: 16px;
+    }
+    .language-switch:hover {
+      background-color: #163a5f;
+    }
+  </style>
+</head>
+<body>
+  <h1>GymBuddy – Privacy Policy</h1>
 
-    <a href="privacy-policy.html" class="language-switch">English</a>
-    <a href="privacy-policy-de.html" class="language-switch">Deutsch</a>
+  <a href="privacy-policy.html" class="language-switch">English</a>
+  <a href="privacy-policy-de.html" class="language-switch">Deutsch</a>
 
-    <p><strong>Last Updated:</strong> 07.02.2026</p>
+  <p><strong>Last updated:</strong> 07.02.2025</p>
 
+  <h2>1. Data Controller</h2>
+  <p>
+    The party responsible for data processing within the meaning of data
+    protection laws is:
+  </p>
+  <p>
+    Max Mustermann<br />
+    Email: core.app.dev@protonmail.com
+  </p>
 
-    <h2>General Information</h2>
-    <p>
-      Protecting your personal data is very important to us. This app does not process or store any personal data on external servers. All data remains exclusively on your device.
-    </p>
+  <h2>2. App Distribution</h2>
+  <p>
+    GymBuddy is distributed via the Google Play Store. When downloading and
+    using the app, the privacy policies of Google also apply.
+  </p>
 
-    <h2>Data Collection and Storage</h2>
-    <p>
-      The app stores entered data only locally on your device. No data is transmitted to third parties or stored online.
-    </p>
+  <h2>3. Processing of Personal Data</h2>
 
-    <h2>User Rights</h2>
-    <p>
-      Since the app does not store or process personal data, rights such as data deletion or data portability do not apply.
-    </p>
+  <h3>3.1 Local Data Storage</h3>
+  <p>
+    All workout-related data entered by you (such as workouts, exercises,
+    repetitions, weights, and time tracking) is stored exclusively on your
+    device. No data is transmitted to external servers.
+  </p>
 
-    <h2>Changes to the Privacy Policy</h2>
-    <p>
-      This privacy policy may be updated as needed. Please check regularly for any changes.
-    </p>
+  <h3>3.2 No Analytics or Tracking</h3>
+  <p>
+    GymBuddy does not use analytics, tracking, or advertising services. No user
+    profiles are created and no personal data is analyzed.
+  </p>
 
-    <h2>Contact</h2>
-    <p>
-      If you have any questions about the privacy policy, please contact us at: core.app.dev@protonmail.com
-    </p>
-  </body>
+  <h2>4. External Content (GIFs)</h2>
+
+  <h3>4.1 Source of GIFs</h3>
+  <p>
+    To visualize exercises, the app loads animated GIFs from the following
+    external provider:
+  </p>
+  <p>
+    https://static.exercisedb.dev/
+  </p>
+
+  <h3>4.2 Method of Integration</h3>
+  <p>
+    The GIFs are loaded directly via their URLs and displayed within the app
+    (for example via Flutter Image or CachedNetworkImage).
+  </p>
+
+  <h3>4.3 Automatic Data Transmission</h3>
+  <p>
+    When opening certain screens of the app, a connection to the servers of
+    the external provider is automatically established. Due to technical
+    reasons, information such as the IP address may be transmitted.
+  </p>
+
+  <p>
+    The app developer has no influence over the nature, scope, or purpose of
+    data processing carried out by this third-party provider.
+  </p>
+
+  <h2>5. Data Sharing</h2>
+  <p>
+    Except for the external GIF integration described above, no personal data
+    is shared with third parties.
+  </p>
+
+  <h2>6. App Permissions</h2>
+  <p>GymBuddy requires the following permissions:</p>
+  <ul>
+    <li>Internet (to load external GIFs)</li>
+    <li>Notifications (e.g. workout and rest timers)</li>
+    <li>
+      Background service / foreground service (to keep workouts running)
+    </li>
+    <li>Audio (sound notification at the end of rest periods)</li>
+  </ul>
+
+  <h2>7. Children and Minors</h2>
+  <p>
+    This app is not specifically intended for children under the age of 13.
+    No personal data from children is knowingly collected.
+  </p>
+
+  <h2>8. Changes to This Privacy Policy</h2>
+  <p>
+    This privacy policy may be updated if required due to legal or technical
+    changes. The current version is always available within the app and on
+    this website.
+  </p>
+
+  <h2>9. Contact</h2>
+  <p>
+    If you have any questions regarding privacy or data processing, please
+    contact:
+  </p>
+  <p>
+    Email: core.app.dev@protonmail.com
+  </p>
+</body>
 </html>
