update English and German privacy policies with new contact information

--- a/gymbuddy/privacy-policy.html
+++ b/gymbuddy/privacy-policy.html
@@ -48,7 +48,7 @@
     protection laws is:
   </p>
   <p>
-    Max Mustermann<br />
+    Leon Bethke<br />
     Email: core.app.dev@protonmail.com
   </p>
 
